aura: update ClientSurfaceEmbedder and server on LocalSurfaceId change

If Window::UpdateLocalSurfaceIdFromEmbeddedClient() is called, then
the ClientSurfaceEmbedder needs to be updated as well as the server.

BUG=890969
TEST=covered by test

Change-Id: Ic7fc94166cc5a3f495b01bdd63e41be16092b0d7
Reviewed-on: https://chromium-review.googlesource.com/c/1257365
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597117}
Former-commit-id: 12ef71460252b042f52da8eddc26adf641e2d50b